--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Finance Business - Contact Page</title>
+    <title>CONSEPRIL | Seguridad Privada y Logística</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,16 +45,13 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-8 col-xs-12">
             <ul class="left-info">
-              <li><a href="#"><i class="fa fa-clock-o"></i>Mon-Fri 09:00-17:00</a></li>
-              <li><a href="#"><i class="fa fa-phone"></i>090-080-0760</a></li>
+              <li><a href="#"><i class="fa fa-clock-o"></i>Lunes-Viernes 09:00-17:00</a></li>
+              <li><a href="#"><i class="fa fa-phone"></i>55 5881 8236</a></li>
             </ul>
           </div>
           <div class="col-md-4">
             <ul class="right-icons">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/consepril/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
         </div>
@@ -64,28 +61,25 @@ https://templatemo.com/tm-545-finance-business
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Finance Business</h2></a>
+          <a class="navbar-brand" href="one-page.html"><h2>CONSEPRIL</h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home
+                <a class="nav-link" href="one-page.html">Inicio
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
+                <a class="nav-link" href="services.html">Nuestros Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="services.html">Our Services</a>
+                <a class="nav-link" href="about.html">Sobre Nosotros</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="contact.html">Contact Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="one-page.html">One Page</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
@@ -98,8 +92,8 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h1>Contact Us</h1>
-            <span>feel free to send us a message now!</span>
+            <h1>Contáctanos</h1>
+            <span>Elige uno de nuestros canales de comunicación y con gusto te atenderemos a la brevedad.</span>
           </div>
         </div>
       </div>
@@ -111,9 +105,9 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-4">
             <div class="contact-item">
               <i class="fa fa-phone"></i>
-              <h4>Phone</h4>
+              <h4>Teléfono</h4>
               <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate nec cursus augue.</p>
-              <a href="#">090-080-0760</a>
+              <a href="tel:5558818236">55 5881 8236</a>
             </div>
           </div>
           <div class="col-md-4">
@@ -126,17 +120,17 @@ https://templatemo.com/tm-545-finance-business
           </div>
           <div class="col-md-4">
             <div class="contact-item">
-              <i class="fa fa-map-marker"></i>
-              <h4>Location</h4>
+              <i class="fa fa-whatsapp"></i>
+              <h4>WhatsApp</h4>
               <p>1020 New Mountain Street<br>Forest Park, FP 11220</p>
-              <a href="#">View on Google Maps</a>
+              <a href="https://api.whatsapp.com/send?phone=5579294319&text=Hola, Nececito mas informacion">Envíanos un mensaje de WhatsApp</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-
-    <div class="callback-form contact-us">
+<br>
+    <!-- <div class="callback-form contact-us"> CONTACT FORM
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -180,48 +174,33 @@ https://templatemo.com/tm-545-finance-business
           </div>
         </div>
       </div>
-    </div>
-
+    </div> -->
+<!--  MAP POSITION HERE
     <div id="map">
-<!-- How to change your own map point
+How to change your own map point
 	1. Go to Google Maps
 	2. Click on your location point
 	3. Click "Share" and choose "Embed map" tab
 	4. Copy only URL and paste it within the src="" field below
--->
+
       <iframe src="https://maps.google.com/maps?q=Av.+Lúcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
-
-    <div class="partners contact-partners">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="owl-partners owl-carousel">
-              <div class="partner-item">
-                <img src="assets/images/client-01.png" alt="">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  -->
+ 
 
 
     <!-- Footer Starts Here -->
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-3 footer-item">
-            <h4>Finance Business</h4>
-            <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p>
+          <div class="col-md-6 footer-item">
+            <h4>CONSEPRIL | Seguridad Privada y Logística</h4>
+            <p>Con más de 25 años de experiencia, entendemos las complejidades de nuestra industria y podemos ayudarte a mantener tus instalaciones, personal, activos y clientes a salvo.</p>
             <ul class="social-icons">
-              <li><a rel="nofollow" href="https://fb.com/templatemo" target="_blank"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/consepril"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
-          <div class="col-md-3 footer-item">
+         <!-- <div class="col-md-3 footer-item">
             <h4>Useful Links</h4>
             <ul class="menu-list">
               <li><a href="#">Vivamus ut tellus mi</a></li>
@@ -230,20 +209,25 @@ https://templatemo.com/tm-545-finance-business
               <li><a href="#">Cursus augue hasellus</a></li>
               <li><a href="#">Lacinia ac sapien</a></li>
             </ul>
-          </div>
+          </div>-->
           <div class="col-md-3 footer-item">
-            <h4>Additional Pages</h4>
+            <!--<h4>Additional Pages</h4>
             <ul class="menu-list">
               <li><a href="#">About Us</a></li>
               <li><a href="#">How We Work</a></li>
               <li><a href="#">Quick Support</a></li>
               <li><a href="#">Contact Us</a></li>
               <li><a href="#">Privacy Policy</a></li>
-            </ul>
+            </ul>-->
           </div>
-          <div class="col-md-3 footer-item last-item">
-            <h4>Contact Us</h4>
-            <div class="contact-form">
+          <div class="col-md-3 footer-item last-item" style="text-align: center;">
+            <h4>Solicita más información:</h4>
+            <ul class="left-info">
+              <li><a href="tel:5558818236">55 5881 8236</a></li>
+              <li></li><a href = "mailto: info@consepril.com" >info@consepril.com</a></li> <br>
+              <br></brZ><li><p>Lunes-Viernes 09:00-17:00</p> 
+            </ul>
+            <!--<div class="contact-form">
               <form id="contact footer-contact" action="" method="post">
                 <div class="row">
                   <div class="col-lg-12 col-md-12 col-sm-12">
@@ -268,7 +252,7 @@ https://templatemo.com/tm-545-finance-business
                   </div>
                 </div>
               </form>
-            </div>
+            </div>-->
           </div>
         </div>
       </div>
@@ -278,9 +262,8 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p>Copyright &copy; 2020 Financial Business Co., Ltd.
-            
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+            <p>Copyright &copy; 2021 CONSEPRIL |
+            <a rel="nofollow noopener" href="https://consepril.com/aviso-de-privacidad/" target="_blank">Aviso de Privacidad</a></p>
           </div>
         </div>
       </div>
