--- a/about.html
+++ b/about.html
@@ -61,14 +61,14 @@ https://templatemo.com/tm-545-finance-business
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="one-page.html"><h2>CONSEPRIL</h2></a>
+          <a class="navbar-brand" href="index.html"><h2>CONSEPRIL</h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="one-page.html">Inicio
+                <a class="nav-link" href="index.html">Inicio
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
@@ -92,8 +92,8 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h1>About Us</h1>
-            <span>We have over 20 years of experience</span>
+            <h1>Sobre Nosotros</h1>
+            <span>Más de 25 años Contribuyendo a la disminución de violencia e inseguridad en nuestro país</span>
           </div>
         </div>
       </div>
@@ -107,8 +107,8 @@ https://templatemo.com/tm-545-finance-business
               <div class="row">
                 <div class="col-md-6 align-self-center">
                   <div class="right-content">
-                    <span>our solid background on finance</span>
-                    <h2>Get to know about <em>our company</em></h2>
+                    <span>Nuestro equipo</span>
+                    <h2>Conformado por <em>especialistas en seguridad</em></h2>
                     <p>Fusce nec ultrices lectus. Duis nec scelerisque risus. Ut id tempor turpis, ac dignissim ipsum. Nulla ullamcorper, ipsum vel condimentum congue, mi odio vehicula tellus, sit amet malesuada justo sem. 
                     <br><br>Pellentesque in sagittis lacus, vel auctor sem. Quisque eu quam eleifend, ullamcorper dui nec, luctus quam.</p>
                     <a href="" class="filled-button">Read More</a>
@@ -125,6 +125,43 @@ https://templatemo.com/tm-545-finance-business
         </div>
       </div>
     </div>
+
+    <div class="single-services">
+      <div class="container">
+        <div class="row" id="tabs">
+          <div class="col-md-4">
+            <ul>
+              <li><a href='#tabs-1'>Visión <i class="fa fa-angle-right"></i></a></li>
+              <li><a href='#tabs-2'>Misión <i class="fa fa-angle-right"></i></a></li>
+              <li><a href='#tabs-3'>Nuestros Valores <i class="fa fa-angle-right"></i></a></li>
+            </ul>
+          </div>
+          <div class="col-md-8">
+            <section class='tabs-content'>
+              <article id='tabs-1'>
+                <img src="assets/images/single_service_01.jpg" alt="">
+                <h4>Visión</h4>
+                <p>Nuestra visión se extiende a dos factores:
+                <br><br>Ser una empresa que contribuya a <strong>reducir el índice de violencia e inseguridad</strong>, generar paz y promover la confianza y fortalecimiento de las instituciones en nuestro país, siempre preservando la vida humana y su patrimonio.<br><br> Ser una empresa que contribuya al <strong>desarrollo y bienestar de nuestros colaboradores</strong> a través de una formación integral que desarrolle su potencial humano.</p>
+              </article>
+              <article id='tabs-2'>
+                <img src="assets/images/single_service_02.jpg" alt="">
+                <h4>Misión</h4>
+                <p>Nuestra misión se basa en tres pilares:
+                  <br><br>Es primordial generar <strong>tranquilidad</strong> al cliente, confianza y certeza de que se encuentra protegido a través de nuestros servicios siempre alineados a las necesidades específicas de cada cliente. <br><br>Estar <strong>actualizados</strong> en tendencias de seguridad, tecnología y procedimientos para ofrecer un servicio de vanguardia. <br><br><strong>Mejora continua</strong> como filosofía de trabajo en todos nuestros niveles jerárquicos, estrategias y metodología para constantemente elevar nuestros estándares.</p>
+                </article>
+              <article id='tabs-3'>
+                <img src="assets/images/single_service_03.jpg" alt="">
+                <h4>Nuestros Valores</h4>
+                <p>Mauris lobortis quam id dictum dignissim. Donec pellentesque erat dolor, cursus dapibus turpis hendrerit quis. Suspendisse at suscipit arcu. Nulla sed erat lectus. Nulla facilisi. In sit amet neque sapien. Donec scelerisque mi at gravida efficitur. Nunc lacinia a est eu malesuada. Curabitur eleifend elit sapien, sed pulvinar orci luctus eget. 
+                <br><br>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc vel ultrices nulla, ac tincidunt eros. Aenean quis tellus velit. Praesent pretium justo non auctor condimentum.</p>
+              </article>
+            </section>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <div class="team">
       <div class="container">
