--- a/contact.html
+++ b/contact.html
@@ -61,14 +61,14 @@ https://templatemo.com/tm-545-finance-business
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="one-page.html"><h2>CONSEPRIL</h2></a>
+          <a class="navbar-brand" href="index.html"><h2>CONSEPRIL</h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="one-page.html">Inicio
+                <a class="nav-link" href="index.html">Inicio
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
@@ -93,7 +93,7 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-12">
             <h1>Contáctanos</h1>
-            <span>Elige uno de nuestros canales de comunicación y con gusto te atenderemos a la brevedad.</span>
+            <span>Solicita información adicional o agenda una visita a tus instalaciones para brindarte una propuesta adecuada. Elige uno de nuestros canales de comunicación y con gusto te atenderemos a la brevedad.</span>
           </div>
         </div>
       </div>
@@ -106,7 +106,7 @@ https://templatemo.com/tm-545-finance-business
             <div class="contact-item">
               <i class="fa fa-phone"></i>
               <h4>Teléfono</h4>
-              <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate nec cursus augue.</p>
+              <p>Llama a nuestras oficinas para hablar con un ejecutivo de ventas.</p>
               <a href="tel:5558818236">55 5881 8236</a>
             </div>
           </div>
@@ -114,23 +114,26 @@ https://templatemo.com/tm-545-finance-business
             <div class="contact-item">
               <i class="fa fa-envelope"></i>
               <h4>Email</h4>
-              <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate nec cursus augue.</p>
-              <a href="#">info@company.com</a>
+              <p>Envíanos un correo con tus datos y servicio requerido. </p>
+              <a href="mailto:info@consepril.com">info@consepril.com</a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="contact-item">
               <i class="fa fa-whatsapp"></i>
               <h4>WhatsApp</h4>
-              <p>1020 New Mountain Street<br>Forest Park, FP 11220</p>
-              <a href="https://api.whatsapp.com/send?phone=5579294319&text=Hola, Nececito mas informacion">Envíanos un mensaje de WhatsApp</a>
+              <p>Si lo prefieres también puedes contactarnos por este medio.</p>
+              <a href="https://api.whatsapp.com/send?phone=4424140624&text=Hola! Necesito mas información sobre...">Envíanos un mensaje</a>
             </div>
           </div>
         </div>
       </div>
     </div>
 <br>
-    <!-- <div class="callback-form contact-us"> CONTACT FORM
+<br>
+<br>
+
+<!-- <div class="callback-form contact-us"> CONTACT FORM
       <div class="container">
         <div class="row">
           <div class="col-md-12">
