--- a/services.html
+++ b/services.html
@@ -61,14 +61,14 @@ https://templatemo.com/tm-545-finance-business
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="one-page.html"><h2>CONSEPRIL</h2></a>
+          <a class="navbar-brand" href="index.html"><h2>CONSEPRIL</h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="one-page.html">Inicio
+                <a class="nav-link" href="index.html">Inicio
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
