--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ https://templatemo.com/tm-545-finance-business
             <div class="img-fill">
                 <div class="text-content">
                   <h6>Estamos listos para ayudarte</h6>
-                  <h4>Consultoría en Seguridad<br> Privada y Logística</h4>
+                  <h4>Seguridad<br> Privada y Logística</h4>
                   <br><br><p>Ayudamos a planear, diseñar y ejecutar una solución personalizada para tu empresa u organización, resolviendo las áreas de oportundidad de tu seguridad.</p>
                   <a href="#about" class="filled-button">Sobre Nosotros</a>
                 </div>
@@ -108,7 +108,7 @@ https://templatemo.com/tm-545-finance-business
             <div class="img-fill">
                 <div class="text-content">
                   <h6>Guardias intramuros</h6>
-                  <h4>Protegemos tu patrimonio<br> y tranquilidad</h4>
+                  <h4>Protegemos <br>tu patrimonio<br> y tranquilidad</h4>
                   <br><br><p>Personal capacitado en procedimientos de emergencias, enfocados en soluciones y mejora continua.</p>
                   <a href="#services" class="filled-button">Nuestros Servicios</a>
                 </div>
@@ -119,8 +119,8 @@ https://templatemo.com/tm-545-finance-business
           <div class="item item-3">
             <div class="img-fill">
                 <div class="text-content">
-                  <h6>Custodias de bienes o valores</h6>
-                  <h4>Nos encargamos de la protección<br> de tus mercancías</h4>
+                  <h6>Custodias de bienes</h6>
+                  <h4>Protegemos <br>tu personal<br> y mercancías</h4>
                   <br><br> <p>Enfocados a prevenir riesgos, llevando a salvo a las personas y mercancías custodiadas a su destino final.</p>
                   <a href="#services" class="filled-button">Nuestros Servicios</a>
                 </div>
@@ -130,7 +130,7 @@ https://templatemo.com/tm-545-finance-business
             <div class="img-fill">
                 <div class="text-content">
                   <h6>Sistemas GPS</h6>
-                  <h4>Protegemos tus vehículos para<br> minimizar riesgos</h4>
+                  <h4>Protegemos <br>tus vehículos<br> vía GPS</h4>
                   <br><br><p>Nuestros dispositivos permiten detectar encendido del motor, geo-localización, inmobilización del vehículo, entre otros.</p>
                   <a href="#services" class="filled-button">Nuestros Servicios</a>
                 </div>
@@ -140,7 +140,7 @@ https://templatemo.com/tm-545-finance-business
             <div class="img-fill">
                 <div class="text-content">
                   <h6>Consultoría Legal</h6>
-                  <h4>Soporte jurídico ante siniestros <br> y eventualidades</h4>
+                  <h4>Soporte jurídico ante siniestros</h4>
                   <br><br><p>Nuestro equipo jurídico te asesora y acompaña. Especialistas en derecho penal y criminología.</p>
                   <a href="#services" class="filled-button">Nuestros Servicios</a>
                 </div>
@@ -175,7 +175,7 @@ https://templatemo.com/tm-545-finance-business
             <div class="service-item">
               <img src="assets/images/custodiaex.jpeg" alt="">
               <div class="down-content">
-                <h4>Custodias de bienes o valores </h4>
+                <h4>Custodias de bienes </h4>
                 <p>Desde cualquier estado de la república y con monitoreo GPS para llevar a salvo a las personas y mercancías custodiadas a su destino final.</p>
                 <a href="services.html" class="filled-button">Más Información</a>
               </div>
@@ -308,7 +308,7 @@ https://templatemo.com/tm-545-finance-business
                 <div class="inner-content">
                   <h4>ETAPA 2. PROCESO DE CAPACITACIÓN</h4>
                   <span>Inducción e integración, capacitación en procedimientos de emergencias y habilidades blandas.</span>
-                  <br><br><p style="text-align:justify">-Inducción e integración al equipo de trabajo<br>
+                  <br><br><p style="text-align:left">-Inducción e integración al equipo de trabajo<br>
                     -Cursos teóricos y prácticos<br>
                     -Consignas generales y específicas<br>
                     -Resolución de dudas y refuerzo de conocimietos</p>         
@@ -319,7 +319,7 @@ https://templatemo.com/tm-545-finance-business
                 <div class="inner-content">
                   <h4>ETAPA 3. PRESTACIÓN DE SERVICIO</h4>
                   <span>Supervisión y retroalimentación para la corrección y mejora en las áreas de oportunidad de los elementos de seguridad.</span>
-                  <br><br><p style="text-align:justify">-Supervisión<br>
+                  <br><br><p style="text-align:left">-Supervisión<br>
                     -Retroalimentación<br>
                     -Corrección y mejora<br>
                     -Fortalecimiento en áreas de oportunidad</p>         
