--- a/about.html
+++ b/about.html
@@ -109,9 +109,8 @@ https://templatemo.com/tm-545-finance-business
                   <div class="right-content">
                     <span>Nuestro equipo</span>
                     <h2>Conformado por <em>especialistas en seguridad</em></h2>
-                    <p>Fusce nec ultrices lectus. Duis nec scelerisque risus. Ut id tempor turpis, ac dignissim ipsum. Nulla ullamcorper, ipsum vel condimentum congue, mi odio vehicula tellus, sit amet malesuada justo sem. 
-                    <br><br>Pellentesque in sagittis lacus, vel auctor sem. Quisque eu quam eleifend, ullamcorper dui nec, luctus quam.</p>
-                    <a href="" class="filled-button">Read More</a>
+                    <p>Nos importa el desarrollo de conocimiento y capacidades en nuestro personal para servir siempre orientados a soluciones, brindar tranquilidad y confianza a nuestros clientes para que tengan la certeza de estar protegidos. 
+                    <br><br>Nos motiva estar a la vanguardia de tendencias de seguridad, tecnología y procedimientos para poder brindar servicios que cumplan con las necesidades de nuestros clientes y sobresalir de los estándares de la industria.</p>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -153,8 +152,14 @@ https://templatemo.com/tm-545-finance-business
               <article id='tabs-3'>
                 <img src="assets/images/single_service_03.jpg" alt="">
                 <h4>Nuestros Valores</h4>
-                <p>Mauris lobortis quam id dictum dignissim. Donec pellentesque erat dolor, cursus dapibus turpis hendrerit quis. Suspendisse at suscipit arcu. Nulla sed erat lectus. Nulla facilisi. In sit amet neque sapien. Donec scelerisque mi at gravida efficitur. Nunc lacinia a est eu malesuada. Curabitur eleifend elit sapien, sed pulvinar orci luctus eget. 
-                <br><br>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc vel ultrices nulla, ac tincidunt eros. Aenean quis tellus velit. Praesent pretium justo non auctor condimentum.</p>
+                <h6>Integridad</h6><br>
+                <p>Actuar con consistencia ética y responsabilidad ante cualquier situación, comprometidos con nuestro trabajo como proveedores de seguridad.</p>
+                <br><h6>Profesionalismo</h6><br><p>Ser profesionales en nuestro trabajo, actuando con disciplina; siendo coherentes en nuestra manera de pensar, hablar y actuar. Siempre apegados a nuestras consignas y atención al cliente.</p><br>
+                <h6>Comunicación efectiva</h6><br>
+                <p>Promover la comunicación efectiva, por medio de escucha activa, claridad y tolerancia frente a otras ideas, para una mejor coordinación de trabajo.</p><br>
+                <h6>Orientado a soluciones</h6><br><p>Adaptar nuestros servicios a la realidad y entorno de cada cliente; siendo capaces de formar juicios, razonar y pensar con lógica, siempre orientados a brindar soluciones efectivas.</p><br>
+                <h6>Mejora continua</h6><br><p>Ser cada vez mejores en lo que hacemos, siendo conscientes de nuestras áreas de oportunidad y mejorar a través de retroalimentación e implementación de nuevos procedimientos.</p><br>
+                <h6>Cultura preventiva</h6><br><p>Ejecutar con efectividad y precisión nuestras consignas. Operar con reflexión y precaución a fin de evitar daños colaterales. Aportar medidas preventivas, con el objetivo permanente de salvaguardar la seguridad, vida humana y su patrimonio.</p>
               </article>
             </section>
           </div>
@@ -163,7 +168,7 @@ https://templatemo.com/tm-545-finance-business
     </div>
 
 
-    <div class="team">
+    <!--<div class="team"> OUR TEAM SHOULD BE HERE
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -205,52 +210,56 @@ https://templatemo.com/tm-545-finance-business
         </div>
       </div>
     </div>
-
-    <div class="fun-facts">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="left-content">
-              <span>Lorem ipsum dolor sit amet</span>
-              <h2>Our solutions for your <em>business growth</em></h2>
-              <p>Pellentesque ultrices at turpis in vestibulum. Aenean pretium elit nec congue elementum. Nulla luctus laoreet porta. Maecenas at nisi tempus, porta metus vitae, faucibus augue. 
-              <br><br>Fusce et venenatis ex. Quisque varius, velit quis dictum sagittis, odio velit molestie nunc, ut posuere ante tortor ut neque.</p>
-              <a href="" class="filled-button">Read More</a>
-            </div>
+  -->
+  <div class="fun-facts">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="left-content">
+            <span>Resultados 2020</span>
+            <h2>Nuestros logros<em> CONSEPRIL</em></h2>
+            <p>Agradecemos la confianza de nuestros clientes y reiteramos nuestro compromiso de brindar servicios enfocados a soluciones y mejora continua. 
+            <br><br>Para nosotros es importante ser una empresa que contribuya a reducir el índice de violencia e inseguridad, preservando la vida humana y protegiendo su patrimonio.</p>
+            <!--Boton <a href="" class="filled-button">Read More</a> -->
           </div>
-          <div class="col-md-6 align-self-center">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="count-area-content">
-                  <div class="count-digit">945</div>
-                  <div class="count-title">Work Hours</div>
-                </div>
+        </div>
+        <div class="col-md-6 align-self-center">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="count-area-content">
+                <div class="count-title">Más de</div>
+                <div class="count-digit">600</div>
+                <div class="count-title">Guardias Capacitados</div>
               </div>
-              <div class="col-md-6">
-                <div class="count-area-content">
-                  <div class="count-digit">1280</div>
-                  <div class="count-title">Great Reviews</div>
-                </div>
+            </div>
+            <div class="col-md-6">
+              <div class="count-area-content">
+                <div class="count-title">Más de</div>
+                <div class="count-digit">1000</div>
+                <div class="count-title">Custodias realizadas</div>
               </div>
-              <div class="col-md-6">
-                <div class="count-area-content">
-                  <div class="count-digit">578</div>
-                  <div class="count-title">Projects Done</div>
-                </div>
+            </div>
+            <div class="col-md-6">
+              <div class="count-area-content">
+                <div class="count-title">Más de</div>
+                <div class="count-digit">200</div>
+                <div class="count-title">Vehículos protegidos vía GPS</div>
               </div>
-              <div class="col-md-6">
-                <div class="count-area-content">
-                  <div class="count-digit">26</div>
-                  <div class="count-title">Awards Won</div>
-                </div>
+            </div>
+            <div class="col-md-6">
+              <div class="count-area-content">
+                <div class="count-title">Más de</div>
+                <div class="count-digit">40</div>
+                <div class="count-title">Eventualidades atendidas</div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="testimonials">
+   <!-- <div class="testimonials">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -303,7 +312,21 @@ https://templatemo.com/tm-545-finance-business
         </div>
       </div>
     </div>
+  -->
 
+  <div class="request-form" id="contactus">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
+          <h4>Solicita atención personal.</h4>
+          <span>Elige uno de nuestros canales de comunicación y te atenderemos a la brevedad. </span>
+        </div>
+        <div class="col-md-4">
+          <a href="contact.html" class="border-button">Contacto</a>
+        </div>
+      </div>
+    </div>
+  </div>
     <!-- Footer Starts Here -->
     <footer>
       <div class="container">
