--- a/index.html
+++ b/index.html
@@ -57,16 +57,15 @@ https://templatemo.com/tm-545-finance-business
         </div>
       </div>
     </div>
-
-    <header class="">
+  
+    <header class="header">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <picture>
-            <source srcset="./assets/images/Logos/Consepril40.png" href="#top" media="(max-width: 500px)">
-            <source srcset="./assets/images/Logos/Consepril70.png" media="(min-width: 600px">
+            <source srcset="./assets/images/Logos/Consepril40.png"  href="#top" media="(max-width: 500px)">
+            <source srcset="./assets/images/Logos/Consepril70.png"  media="(min-width: 600px">
             <img src="./assets/images/Logos/Consepril40.png" alt="">
           </picture>
-          <!--<img src="./assets/images/Logos/Consepril.png" href="#" width="250" height="40">-->
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -88,10 +87,10 @@ https://templatemo.com/tm-545-finance-business
               </li>
             </ul>
           </div>
-        </div>
       </nav>
     </header>
-
+  
+    
     <!-- Page Content -->
     <!-- Banner Starts Here -->
     <div class="main-banner header-text" id="top">
