--- a/services.html
+++ b/services.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <title>CONSEPRIL | Seguridad Privada y Logística</title>
+    <link rel="shortcut icon" type="image/jpg" href="/assets/images/Logos/CONSEPRIL_favicon.jpg"/>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
